--- a/main.html
+++ b/main.html
@@ -1,56 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grid Layout</title>
-    <style>
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
-            max-width: 300px;
-            margin: 20px auto;
-            padding: 20px;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Grid Layout Design</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
 
-        .grid-item {
-            background-color: #3498db;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-radius: 5px;
-            font-family: Arial, sans-serif;
-            font-weight: bold;
-            font-size: 18px;
-        }
+    h2 {
+      font-size: 24px;
+    }
 
-        /* Optional: Different colors for visual appeal */
-        .grid-item:nth-child(odd) {
-            background-color: #e74c3c;
-        }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: auto;
+      gap: 8px;
+      background-color: white;
+    }
 
-        .grid-item:nth-child(even) {
-            background-color: #2ecc71;
-        }
+    .box {
+      background-color: green;
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+      padding: 20px;
+    }
 
-        .grid-item:last-child {
-            background-color: #f39c12;
-        }
-    </style>
+    .box1 {
+      grid-column: 1 / 4;
+    }
+
+    .box2 {
+      grid-row: 2 / 6;
+      grid-column: 1 / 2;
+    }
+
+    .box3 {
+      grid-column: 2 / 3;
+    }
+
+    .box4 {
+      grid-column: 3 / 4;
+    }
+
+    .box5 {
+      grid-column: 2 / 3;
+    }
+
+    .box6 {
+      grid-column: 3 / 4;
+    }
+
+    .box7 {
+      grid-column: 2 / 3;
+    }
+
+    .box8 {
+      grid-column: 3 / 4;
+    }
+
+    .box9 {
+      grid-column: 3 / 4;
+    }
+
+    .box10 {
+      grid-column: 2 / 4;
+    }
+  </style>
 </head>
 <body>
-    <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div> 
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
-        <div class="grid-item">10</div>
-    </div>
+  <h2>CSS Grid Layout Design</h2>
+  <p>Create the following layout using grid layout:</p>
+  <div class="container">
+    <div class="box box1">1</div>
+    <div class="box box2">2</div>
+    <div class="box box3">3</div>
+    <div class="box box4">4</div>
+    <div class="box box5">5</div>
+    <div class="box box6">6</div>
+    <div class="box box7">7</div>
+    <div class="box box8">8</div>
+    <div class="box box9">9</div>
+    <div class="box box10">10</div>
+  </div>
 </body>
 </html>
