--- a/main.html
+++ b/main.html
@@ -4,88 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Grid Layout Design</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-
-    h2 {
-      font-size: 24px;
-    }
-
-    .container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: auto;
-      gap: 8px;
-      background-color: white;
-    }
-
-    .box {
-      background-color: green;
-      color: white;
-      font-size: 24px;
-      font-weight: bold;
-      padding: 20px;
-    }
-
-    .box1 {
-      grid-column: 1 / 4;
-    }
-
-    .box2 {
-      grid-row: 2 / 6;
-      grid-column: 1 / 2;
-    }
-
-    .box3 {
-      grid-column: 2 / 3;
-    }
-
-    .box4 {
-      grid-column: 3 / 4;
-    }
-
-    .box5 {
-      grid-column: 2 / 3;
-    }
-
-    .box6 {
-      grid-column: 3 / 4;
-    }
-
-    .box7 {
-      grid-column: 2 / 3;
-    }
-
-    .box8 {
-      grid-column: 3 / 4;
-    }
-
-    .box9 {
-      grid-column: 3 / 4;
-    }
-
-    .box10 {
-      grid-column: 2 / 4;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>CSS Grid Layout Design</h2>
   <p>Create the following layout using grid layout:</p>
+
   <div class="container">
-    <div class="box box1">1</div>
-    <div class="box box2">2</div>
-    <div class="box box3">3</div>
-    <div class="box box4">4</div>
-    <div class="box box5">5</div>
-    <div class="box box6">6</div>
-    <div class="box box7">7</div>
-    <div class="box box8">8</div>
-    <div class="box box9">9</div>
-    <div class="box box10">10</div>
+    <div class="item item1">1</div>
+    <div class="item item2">2</div>
+    <div class="item item3">3</div>
+    <div class="item item4">4</div>
+    <div class="item item5">5</div>
+    <div class="item item6">6</div>
+    <div class="item item7">7</div>
+    <div class="item item8">8</div>
+    <div class="item item9">9</div>
+    <div class="item item10">10</div>
   </div>
 </body>
 </html>
