--- a/main.html
+++ b/main.html
@@ -2,22 +2,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Grid Layout Design</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Grid Layout Assignment</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      background: #f5f5f5;
+      font-family: Arial, sans-serif;
+    }
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(5, minmax(100px, auto));
+      gap: 10px;
+      padding: 20px;
+    }
+
+    .grid-item {
+      background-color: green;
+      color: white;
+      font-size: 4vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 5px;
+    }
+
+    /* Specific spans based on example instructions */
+    .item1 {
+      grid-column: 1 / 5;   /* span all 4 columns */
+    }
+    .item2 {
+      grid-column: 1 / 2;   /* first column */
+      grid-row: 2 / 6;      /* span rows 2 to 5 (4 rows) */
+    }
+    .item4 {
+      /* span 2 columns somewhere on row 3 maybe */
+      grid-column: 2 / 4;
+      grid-row: 3 / 4;
+    }
+    .item5 {
+      /* span 2 columns next to item4 */
+      grid-column: 4 / 6;   /* but we only have 4 columns: so 4 / 5 perhaps */
+      grid-column: 4 / 5;
+      grid-row: 3 / 4;
+    }
+    .item10 {
+      /* tenth item spans 3 columns somewhere maybe row 5 */
+      grid-column: 2 / 5;
+      grid-row: 5 / 6;
+    }
+
+    /* Default grid items numbering */
+    .item3, .item6, .item7, .item8, .item9 {
+      /* regular single cell items */
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="box b1">1</div>
-    <div class="box b2">2</div>
-    <div class="box b3">3</div>
-    <div class="box b4">4</div>
-    <div class="box b5">5</div>
-    <div class="box b6">6</div>
-    <div class="box b7">7</div>
-    <div class="box b8">8</div>
-    <div class="box b9">9</div>
-    <div class="box b10">10</div>
+
+  <div class="grid-container">
+    <div class="grid-item item1">1</div>
+    <div class="grid-item item2">2</div>
+    <div class="grid-item grid-item item3">3</div>
+    <div class="grid-item grid-item item4">4</div>
+    <div class="grid-item grid-item item5">5</div>
+    <div class="grid-item grid-item item6">6</div>
+    <div class="grid-item grid-item item7">7</div>
+    <div class="grid-item grid-item item8">8</div>
+    <div class="grid-item grid-item item9">9</div>
+    <div class="grid-item grid-item item10">10</div>
   </div>
+
 </body>
 </html>
