--- a/main.html
+++ b/main.html
@@ -1,82 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Grid Layout Assignment</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      background: #f5f5f5;
-      font-family: Arial, sans-serif;
-    }
-    .grid-container {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(5, minmax(100px, auto));
-      gap: 10px;
-      padding: 20px;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Grid Layout Design</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
 
-    .grid-item {
-      background-color: green;
-      color: white;
-      font-size: 4vw;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 5px;
-    }
+      .container {
+        display: grid;
+        grid-template-areas:
+          "header header header"
+          "sidebar main main"
+          "footer footer footer";
+        grid-template-columns: 1fr 2fr 2fr;
+        grid-template-rows: 100px 300px 100px;
+        gap: 10px;
+        height: 100vh;
+        padding: 10px;
+        box-sizing: border-box;
+      }
 
-    /* Specific spans based on example instructions */
-    .item1 {
-      grid-column: 1 / 5;   /* span all 4 columns */
-    }
-    .item2 {
-      grid-column: 1 / 2;   /* first column */
-      grid-row: 2 / 6;      /* span rows 2 to 5 (4 rows) */
-    }
-    .item4 {
-      /* span 2 columns somewhere on row 3 maybe */
-      grid-column: 2 / 4;
-      grid-row: 3 / 4;
-    }
-    .item5 {
-      /* span 2 columns next to item4 */
-      grid-column: 4 / 6;   /* but we only have 4 columns: so 4 / 5 perhaps */
-      grid-column: 4 / 5;
-      grid-row: 3 / 4;
-    }
-    .item10 {
-      /* tenth item spans 3 columns somewhere maybe row 5 */
-      grid-column: 2 / 5;
-      grid-row: 5 / 6;
-    }
+      .header {
+        grid-area: header;
+        background-color: #f08080;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        color: white;
+      }
 
-    /* Default grid items numbering */
-    .item3, .item6, .item7, .item8, .item9 {
-      /* regular single cell items */
-    }
-  </style>
-</head>
-<body>
+      .sidebar {
+        grid-area: sidebar;
+        background-color: #90ee90;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+      }
 
-  <div class="grid-container">
-    <div class="grid-item item1">1</div>
-    <div class="grid-item item2">2</div>
-    <div class="grid-item grid-item item3">3</div>
-    <div class="grid-item grid-item item4">4</div>
-    <div class="grid-item grid-item item5">5</div>
-    <div class="grid-item grid-item item6">6</div>
-    <div class="grid-item grid-item item7">7</div>
-    <div class="grid-item grid-item item8">8</div>
-    <div class="grid-item grid-item item9">9</div>
-    <div class="grid-item grid-item item10">10</div>
-  </div>
+      .main {
+        grid-area: main;
+        background-color: #add8e6;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+      }
 
-</body>
+      .footer {
+        grid-area: footer;
+        background-color: #ffa500;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">Header</div>
+      <div class="sidebar">Sidebar</div>
+      <div class="main">Main</div>
+      <div class="footer">Footer</div>
+    </div>
+  </body>
 </html>
