--- a/main.html
+++ b/main.html
@@ -1,74 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Grid Layout Design</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-
-      .container {
-        display: grid;
-        grid-template-areas:
-          "header header header"
-          "sidebar main main"
-          "footer footer footer";
-        grid-template-columns: 1fr 2fr 2fr;
-        grid-template-rows: 100px 300px 100px;
-        gap: 10px;
-        height: 100vh;
-        padding: 10px;
-        box-sizing: border-box;
-      }
-
-      .header {
-        grid-area: header;
-        background-color: #f08080;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-        color: white;
-      }
-
-      .sidebar {
-        grid-area: sidebar;
-        background-color: #90ee90;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-      }
-
-      .main {
-        grid-area: main;
-        background-color: #add8e6;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-      }
-
-      .footer {
-        grid-area: footer;
-        background-color: #ffa500;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">Header</div>
-      <div class="sidebar">Sidebar</div>
-      <div class="main">Main</div>
-      <div class="footer">Footer</div>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Grid Layout</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <div class="grid-item item1">1</div>
+    <div class="grid-item item2">2</div>
+    <div class="grid-item item3">3</div>
+    <div class="grid-item item4">4</div>
+    <div class="grid-item item5">5</div>
+    <div class="grid-item item6">6</div>
+  </div>
+</body>
 </html>
