--- a/main.html
+++ b/main.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Grid Layout</title>
+  <title>CSS Grid Layout Design</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
+  <div id="grid">
     <div class="grid-item item1">1</div>
     <div class="grid-item item2">2</div>
     <div class="grid-item item3">3</div>
     <div class="grid-item item4">4</div>
     <div class="grid-item item5">5</div>
     <div class="grid-item item6">6</div>
+    <div class="grid-item item7">7</div>
+    <div class="grid-item item8">8</div>
+    <div class="grid-item item9">9</div>
+    <div class="grid-item item10">10</div>
   </div>
 </body>
 </html>
