--- a/main.html
+++ b/main.html
@@ -4,20 +4,91 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Grid Layout Design</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background: white;
+      padding: 20px;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: 100px;
+      gap: 10px;
+      background-color: green;
+      padding: 10px;
+    }
+
+    .item {
+      background: green;
+      color: white;
+      font-size: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 2px solid white;
+    }
+
+    /* Grid positioning */
+    .item1 {
+      grid-column: 1 / 4;
+    }
+
+    .item2 {
+      grid-row: 2 / 6;
+    }
+
+    .item3 {
+      grid-column: 2 / 3;
+    }
+
+    .item4 {
+      grid-column: 3 / 4;
+    }
+
+    .item5 {
+      grid-column: 2 / 3;
+    }
+
+    .item6 {
+      grid-column: 3 / 4;
+    }
+
+    .item7 {
+      grid-column: 2 / 3;
+    }
+
+    .item8 {
+      grid-column: 3 / 4;
+    }
+
+    .item9 {
+      grid-column: 3 / 4;
+    }
+
+    .item10 {
+      grid-column: 2 / 4;
+    }
+  </style>
 </head>
 <body>
-  <div id="grid">
-    <div class="grid-item item1">1</div>
-    <div class="grid-item item2">2</div>
-    <div class="grid-item item3">3</div>
-    <div class="grid-item item4">4</div>
-    <div class="grid-item item5">5</div>
-    <div class="grid-item item6">6</div>
-    <div class="grid-item item7">7</div>
-    <div class="grid-item item8">8</div>
-    <div class="grid-item item9">9</div>
-    <div class="grid-item item10">10</div>
+  <div class="container">
+    <div class="item item1">1</div>
+    <div class="item item2">2</div>
+    <div class="item item3">3</div>
+    <div class="item item4">4</div>
+    <div class="item item5">5</div>
+    <div class="item item6">6</div>
+    <div class="item item7">7</div>
+    <div class="item item8">8</div>
+    <div class="item item9">9</div>
+    <div class="item item10">10</div>
   </div>
 </body>
 </html>
