--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CSS Grid Layout Design</title>
   <style>
     * {
@@ -16,10 +16,10 @@
       padding: 20px;
     }
 
-    .container {
+    #grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 100px;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: repeat(5, 124px);
       gap: 10px;
       background-color: green;
       padding: 10px;
@@ -35,50 +35,40 @@
       border: 2px solid white;
     }
 
-    /* Grid positioning */
     .item1 {
       grid-column: 1 / 4;
     }
-
     .item2 {
       grid-row: 2 / 6;
     }
-
     .item3 {
       grid-column: 2 / 3;
     }
-
     .item4 {
       grid-column: 3 / 4;
     }
-
     .item5 {
       grid-column: 2 / 3;
     }
-
     .item6 {
       grid-column: 3 / 4;
     }
-
     .item7 {
       grid-column: 2 / 3;
     }
-
     .item8 {
       grid-column: 3 / 4;
     }
-
     .item9 {
       grid-column: 3 / 4;
     }
-
     .item10 {
       grid-column: 2 / 4;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div id="grid">
     <div class="item item1">1</div>
     <div class="item item2">2</div>
     <div class="item item3">3</div>
