--- a/main.html
+++ b/main.html
@@ -1,84 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSS Grid Layout Design</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
 
-    body {
-      background: white;
-      padding: 20px;
-    }
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-    #grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: repeat(5, 124px);
-      gap: 10px;
-      background-color: green;
-      padding: 10px;
-    }
-
-    .item {
-      background: green;
-      color: white;
-      font-size: 30px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 2px solid white;
-    }
-
-    .item1 {
-      grid-column: 1 / 4;
-    }
-    .item2 {
-      grid-row: 2 / 6;
-    }
-    .item3 {
-      grid-column: 2 / 3;
-    }
-    .item4 {
-      grid-column: 3 / 4;
-    }
-    .item5 {
-      grid-column: 2 / 3;
-    }
-    .item6 {
-      grid-column: 3 / 4;
-    }
-    .item7 {
-      grid-column: 2 / 3;
-    }
-    .item8 {
-      grid-column: 3 / 4;
-    }
-    .item9 {
-      grid-column: 3 / 4;
-    }
-    .item10 {
-      grid-column: 2 / 4;
-    }
-  </style>
-</head>
-<body>
-  <div id="grid">
-    <div class="item item1">1</div>
-    <div class="item item2">2</div>
-    <div class="item item3">3</div>
-    <div class="item item4">4</div>
-    <div class="item item5">5</div>
-    <div class="item item6">6</div>
-    <div class="item item7">7</div>
-    <div class="item item8">8</div>
-    <div class="item item9">9</div>
-    <div class="item item10">10</div>
-  </div>
-</body>
+  <body>
+    <body id="grid">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>10</div> 
+    </body>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
